--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/socket.io-client": "^3.0.0",
+    "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.3.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
