--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/socket.io-client": "^3.0.0",
-    "firebase": "^9.1.3",
+    "firebase": "^12.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -26,10 +26,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.2",
+    "vite": "^7.1.4"
   }
 }
